# laboratorio-dbt

./: README.md  northwind_tabelas_teste.sql  pyproject.toml
cloud_postgres/: dbt_project.yml
cloud_postgres/models/marts/: produtos.sql
cloud_postgres/models/raw/crm/: raw_crm__nova_regions.sql  raw_crm__nova_tabela.sql
cloud_postgres/models/staging/crm/: stg_crm__nova_pedidos.sql  stg_crm__nova_regions.sql
cloud_postgres/seeds/: pedidos.csv  teste.csv
northwind_testes/: dbt_project.yml
northwind_testes/models/staging/crm/: _crm_models.yml  _crm_sources.yml  stg_crm__orders.sql  stg_customers.sql
