[project]
name = "dbt-core-fedora"
version = "0.1.0"
description = ""
authors = [
    {name = "Ricardo Marques",email = "dataricardom@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-postgres (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
